--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_ROOT_HOST: "%"
-      MYSQL_DATABASE: test
+      MYSQL_DATABASE: travelGame
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     ports:
