--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>org.example.MainApp</mainClass>
+                    <mainClass>org.example.TravelGame</mainClass>
                 </configuration>
             </plugin>
         </plugins>
